--- a/blog.css
+++ b/blog.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+.clearfix:after{
+    content: "";
+    display:table;
+    clear: both;
+}
+
 body{
 
     font-family: Arial, Helvetica, sans-serif;
@@ -40,16 +46,25 @@ h2{
 .container{
 
     width: 1140px;
-    margin-left: auto;
-    margin-right: auto;
+   
+    margin:20px auto 0 auto;
 }
 .blog-post{
     background-color: aquamarine;
+    width: 75%;
+    float: left;
+    padding-right: 30px;
 
 }
 .other-posts{
     background-color: blue;
-    
+    width: 25%;
+    float: left;
+
 }
 
-.
+.author-box{
+
+    border-top: 1px solid rgb(155, 152, 152)
+    
+}
