--- a/blog.css
+++ b/blog.css
@@ -42,6 +42,9 @@ h2{
 }
 #author-text{
     font-size: 22px;
+    float: left;
+    margin-top: 30px;
+    margin-left: 20px;
 }
 .container{
 
@@ -50,14 +53,15 @@ h2{
     margin:20px auto 0 auto;
 }
 .blog-post{
-    background-color: aquamarine;
+    
     width: 75%;
     float: left;
     padding-right: 30px;
+    position: relative;
 
 }
 .other-posts{
-    background-color: blue;
+    
     width: 25%;
     float: left;
 
@@ -67,4 +71,22 @@ h2{
 
     border-top: 1px solid rgb(155, 152, 152)
     
+}
+
+.author-box img{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    float: left;
+}
+
+.blog-post img{
+    height: 150px;
+    width: auto;
+}
+.date{
+    position:absolute;
+    top:10px;
+    right: 30px;
+
 }
